--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Create.cshtml
@@ -46,11 +46,9 @@
 
                             <div class="form-group">
                                 <label>Expected Close Date</label>
-
-
-                                <div id="datetimepicker2" class="input-group date">
-                                    <input data-format="dd/MM/yyyy" type="text" class="form-control" data-bind="value:ExpectedCloseDate" id="ExpectedDate"></input>
-                                    <span class="input-group-addon">
+                                <div id="datetimepicker2" class="input-append date">
+                                    <input data-format="dd/MM/yyyy" type="text" class="form-control" data-bind="value:ExpectedCloseDate" id="ExpectedMoveInDate"></input>
+                                    <span class="add-on">
                                         <i class="fa fa-calendar" data-time-icon="icon-time"></i>
                                     </span>
                                 </div>
