--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Edit.cshtml
@@ -54,10 +54,9 @@
                                     <div class="form-group">
                                         <label>Expected Close Date</label>
                                         <div id="datetimepicker2" class="input-append date">
-                                            <input data-format="dd/MM/yyyy" type="text" class="form-control" data-bind="value:ExpectedCloseDate" id="ExpectedDate"></input>
+                                            <input data-format="dd/MM/yyyy" type="text" class="form-control" data-bind="value:ExpectedCloseDate" id="ExpectedMoveInDate"></input>
                                             <span class="add-on">
                                                 <i class="fa fa-calendar" data-time-icon="icon-time"></i>
-
                                             </span>
                                         </div>
                                         @*<input type="text" class="form-control" data-bind="datepicker:ExpectedCloseDate,datepickerOptions: { 'dateFormat': 'dd/mm/yy' },value:ExpectedCloseDate" />*@
