--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Details.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Details.cshtml
@@ -154,3 +154,20 @@
     </div>
         </div>
     
+@section scripts{
+    <link href="~/Content/css/select2-bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/css/select2.css" rel="stylesheet" />
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="~/Content/js/select2.min.js"></script>
+    <script src="~/App/ViewModels/CRM/models.js"></script>
+    <script src="~/App/ViewModels/Potential/PotentialViewModel.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var vm = new PotentialViewModel();
+            ko.applyBindings(vm);
+
+            vm.potentialdetail();
+        });
+    </script>
+
+}
