--- a/Source/CRMLite.UI/Areas/CRM/Views/Contact/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Contact/Edit.cshtml
@@ -1,85 +1,233 @@
-﻿
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Create";
 }
 <div class="col-md-12">
-    <h2>Edit</h2>
-</div>
-<input type="hidden" id="hdnContactId" data-value="@ViewBag.ContactId"/>
-<div data-bind="loading:$root.isBusy">
-<div data-bind="loading:$root.isBusy">
-            <div  data-bind="with:SelectedContact">
-                <div class="bdr">
-                    <div class="col-md-6">
 
+    <h3 class="inline-b">
+        Create
+    </h3>
+    <input type="hidden" id="hdnContactId" data-value="@ViewBag.ContactId" />
+
+    <div data-bind="loading:$root.isBusy">
+        <div data-bind="with:SelectedContact">
+            <div class="row">
+                <div class="col-md-2 col-xs-12">
+                    <div class="radio i-checks">
+                        <label>
+                            <input type="radio" name='radioType' value="Individual" data-bind="checked: Individual">
+                            <i></i> Individual
+                        </label>
+                    </div>
+                </div>
+                <div class="col-md-2 col-xs-12">
+                    <div class="radio i-checks">
+                        <label>
+                            <input type="radio" name='radioType' value="Company" data-bind="checked: IsCompany">
+                            <i></i> Company
+                        </label>
+                    </div>
+                </div>
+                @*<input type="radio" name='radioType' value="Individual" data-bind="checked: Individual" /> <label> Individual</label>
+                    <input type="radio" name='radioType' value="Company" data-bind="checked: IsCompany" /> <label>Company</label>*@
+
+            </div>
+            <div class="clearfix"></div>
+            <div class="bdr">
+                <div class="row">
+                    <div class="col-md-6">
                         <div class="form-group ">
                             <label>First Name</label>
-                            <input type="text" data-bind="value:FirstName" class="form-control"/>
+                            <input type="text" data-bind="value:FirstName" class="form-control" />
                         </div>
-
                         <div class="form-group">
                             <label>Last Name</label>
-                            <input type="text" data-bind="value:LastName" class="form-control"/>
+                            <input type="text" data-bind="value:LastName" class="form-control" />
                         </div>
-
                         <div class="form-group">
                             <label>Title</label>
-                            <input type="text" data-bind="value:Title" class="form-control"/>
+                            <input type="text" data-bind="value:Title" class="form-control" />
+                        </div>
+                        <div class="form-group">
+                            <label>Company</label>
+                            <input type="text" data-bind="value:Comapny" class="form-control" />
                         </div>
                         <div class="form-group">
                             <label>Address</label>
                             <textarea data-bind="value:Address" class=" form-control"></textarea>
                         </div>
+                        <div class=" form-group">
+                            <label>Country</label>
+                            <select class="form-control" data-bind="options:$root.Countries,optionsText:'Name',optionsValue:'Id',value:$parent.selectedCountry,optionsCaption:'Select Country'"></select>
+                        </div>
+                        <div class=" form-group">
+                            <label>State</label>
+                            <select class="form-control" data-bind="options:$root.States,optionsText:'Name',optionsValue:'Id',value:$parent.selectedState,optionsCaption:'Select State'"></select>
+                        </div>
+                        <div class=" form-group">
+                            <label>City</label>
+                            <select class="form-control" data-bind="options:$root.Cities,optionsText:'Name',optionsValue:'Id',value:CityId,optionsCaption:'Select City'"></select>
+                        </div>
+
+                        <div class=" form-group m-t-md">
+                            <label class="text-danger">Payment Modes</label>
+                            <div class="col-md-4 m-l-sm">
+                                <label class="checkbox-inline i-checks">
+                                    <input type="checkbox" data-bind="checked:ChequePaymentMode">
+                                    <i></i>Check
+                                </label>
+                            </div>
+                            <div class="col-md-3">
+                                <label class="checkbox-inline i-checks">
+                                    <input type="checkbox" data-bind="checked:CashPaymentMode">
+                                    <i></i>Cash
+                                </label>
+                            </div>
+
+                            <div class="col-md-4">
+                                <label class="checkbox-inline i-checks">
+                                    <input type="checkbox" data-bind="checked:OnlinePaymentMode">
+                                    <i></i>Online Payment
+                                </label>
+                            </div>
+
+                        </div>
+
                     </div>
                     <div class="col-md-6 ">
                         <div class="form-group">
                             <label>Email</label>
-                            <input type="text" data-bind="value:Email" class="form-control"/>
+                            <input type="text" data-bind="value:Email" class="form-control" />
+                        </div>
+                        <div class=" form-group">
+                            <label>Secondary Email</label>
+                            <input type="text" data-bind="value:SecondaryEmail" class="form-control" />
                         </div>
                         <div class="form-group">
                             <label>Phone</label>
-                            <input type="text" data-bind="value:Phone,numericOnly:true" class=" form-control"/>
+                            <input type="text" data-bind="value:Phone,numericOnly:true" class=" form-control" />
                         </div>
-                        <div class="form-group">
-                            <label>Related To</label>
-                            <select data-bind="options: $root.Account ,optionsText: 'Name', optionsValue: 'Id', value:AccountId, optionsCaption:'Select Account'" class="form-control"></select>
+                        <div class=" form-group">
+                            <label>Office Phone</label>
+                            <input type="text" data-bind="value:OfficePhone,numericOnly:true" class="form-control" />
                         </div>
-                        <div class="form-group">
-                            <label>Assigned To</label>
-                            <select data-bind="options: $root.Agent ,optionsText: 'Name', optionsValue: 'Id', value:AgentId" class="form-control"></select>
+                        @*<div class="form-group">
+                                                <label>Related To</label>
+                                                <select data-bind="options: $root.Account ,optionsText: 'Name', optionsValue: 'Id', value:AccountId, optionsCaption:'Select Account'" class="form-control"></select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label>Assigned To</label>
+                                                <select data-bind="options: $root.Agent ,optionsText: 'Name', optionsValue: 'Id', value:AgentId" class="form-control"></select>
+                            </div>*@
+                        <div class=" form-group m-l-lg m-t-lg5">
+                            <label class="checkbox-inline i-checks">
+                                <input type="checkbox" data-bind="checked:TaxEligible">
+                                <i></i>Tax Eligible
+                            </label>
+
                         </div>
+                        <div data-bind="visible:TaxEligible">
+                            <div class=" form-group m-t-lg-h">
+                                <label>Tax id</label>
+                                <input type="text" data-bind="value:TaxId" class="form-control" />
+                            </div>
+                            <div class=" form-group">
+                                <label>Taxpayer Name</label>
+                                <input type="text" data-bind="value:TaxPayerName" class="form-control" />
+                            </div>
+                        </div>
+                        <div class=" form-group m-t-lg">
+                            <label>Ownership(%)</label>
+                            <input type="text" data-bind="value:Ownership,numericOnly:true" class="form-control" />
+                        </div>
+                        <div class=" form-group m-t-xl5">
+
+
+                            <div class="col-md-4">
+                                <label class="checkbox-inline i-checks">
+                                    <input type="checkbox" data-bind="checked:EmailAlerts">
+                                    <i></i>Email Alerts
+                                </label>
+                            </div>
+
+                            <div class="col-md-4  m-b">
+                                <label class="checkbox-inline i-checks">
+                                    <input type="checkbox" data-bind="checked:EmailStatements">
+                                    <i></i>Email Statements
+                                </label>
+                            </div>
+                        </div>
+
+                        <div class=" form-group">
+                            <label>Zip</label>
+                            <input type="text" data-bind="value:Zip,numericOnly:true" class="form-control" />
+                        </div>
+                        <div class="clearfix"></div>
+
                     </div>
-                </div>
-                <div class="col-md-12">
-                    <h4 class="text-primary">Other</h4>
-                </div>
-                <div class="bdr">
-                    <div class="col-lg-12">
-                        <div class="form-group">
-                            <label>Comments</label>
-                            <textarea data-bind="value:Comments" class=" form-control" rows="6"></textarea>
+                    <div class="clearfix"></div>
+                    <div data-bind="visible:OnlinePaymentMode" class="bdr">
+
+
+
+                        <div class="col-lg-12 bdr ">
+                            <h4 class="text-primary m-l-lg">Payment Modes</h4>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class=" form-group">
+                                        <label>Account Number</label>
+                                        <input type="text" data-bind="value:BankAccountNumber,numericOnly:true" class="form-control" />
+                                    </div>
+                                    <div class=" form-group">
+                                        <label>Branch</label>
+                                        <input type="text" data-bind="value:Branch" class="form-control" />
+                                    </div>
+                                    <div class=" form-group">
+                                        <label>Description</label>
+                                        <textarea data-bind="value:Description" class="form-control"></textarea>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class=" form-group">
+                                        <label>Bank</label>
+                                        <input type="text" data-bind="value:Bank" class="form-control" />
+                                    </div>
+                                    <div class=" form-group">
+                                        <label>IFSC</label>
+                                        <input type="text" data-bind="value:BankIFSC" class="form-control" />
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-                <div class="col-md-12">
-                    <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.updateContact"><span class=" ladda-label">Update</span></button>
-                    @*<button type="button" class="btn btn-primary" data-bind="click:$root.updateContact,visible:isUpdate">Update</button>*@
+            <div class="col-md-12 row">
+                <h4 class="text-primary">Other</h4>
+            </div>
+            <div class="bdr">
+
+                <div class="form-group">
+                    <label>Comments</label>
+                    <textarea data-bind="value:Comments" class=" form-control" rows="6"></textarea>
                 </div>
-</div>
+
+            </div>
+        </div>
     </div>
-    @section scripts{
-        <script src="~/Content/js/select2.min.js"></script>
-        <script src="~/App/ViewModels/CRM/models.js"></script>
-        <script src="~/App/ViewModels/Contact/ContactViewModel.js"></script>
-        <script type="text/javascript">
-            $(document).ready(function () {
-                var vm = new ContactViewModel();
-                ko.applyBindings(vm);
-                vm.contactedit();
-            });
-        </script>
-<script src="~/Content/js/script-ladda.js"></script>
-    }
+    @*<button type="button" class="btn btn-primary" data-bind="click:$root.saveContact">Save</button>*@
+    <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveContact"><span class=" ladda-label">Save</span></button>
 
+</div>
+@section scripts{
 
+    <script src="~/App/ViewModels/CRM/models.js"></script>
+    <script src="~/App/ViewModels/Contact/ContactViewModel.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var vm = new ContactViewModel();
+            ko.applyBindings(vm);
+            vm.contactedit();
+        });
+    </script>
+    <script src="~/Content/js/script-ladda.js"></script>
+}
