--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/ConvertLead.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/ConvertLead.cshtml
@@ -51,14 +51,19 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label>Expected Closing Date</label>
-
-
                         <div id="datetimepicker1" class="input-append date">
-                            <input data-format="dd/MM/yyyy" type="text" class="form-control" id="datePickerPoint" />
+                            <input data-format="dd/MM/yyyy" type="text" class="form-control"  id="datePickerPoint"></input>
                             <span class="add-on">
                                 <i class="fa fa-calendar" data-time-icon="icon-time"></i>
                             </span>
                         </div>
+
+                        @*<div id="datetimepicker1" class="input-append date">
+                            <input data-format="dd/MM/yyyy" type="text" class="form-control" id="datePickerPoint" />
+                            <span class="add-on">
+                                <i class="fa fa-calendar" data-time-icon="icon-time"></i>
+                            </span>
+                        </div>*@
 
                         @*<input type="text" placeholder="Click here to Add Date" id="" class="form-control datePtoP">*@
                         @*<input type="text" id="ExpectedDate" class="form-control" data-bind="datepicker:ExpectedDate,value:ExpectedDate" />*@
