--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Edit.cshtml
@@ -54,9 +54,10 @@
                                     <div class="form-group">
                                         <label>Expected Close Date</label>
                                         <div id="datetimepicker2" class="input-append date">
-                                            <input data-format="dd/MM/yyyy" type="text" class="form-control" data-bind="value:ExpectedCloseDate" id="ExpectedMoveInDate"></input>
+                                            <input data-format="dd/MM/yyyy" type="text" class="form-control" data-bind="value:ExpectedCloseDate" id="ExpectedDate"></input>
                                             <span class="add-on">
                                                 <i class="fa fa-calendar" data-time-icon="icon-time"></i>
+
                                             </span>
                                         </div>
                                         @*<input type="text" class="form-control" data-bind="datepicker:ExpectedCloseDate,datepickerOptions: { 'dateFormat': 'dd/mm/yy' },value:ExpectedCloseDate" />*@
@@ -85,13 +86,17 @@
                                         <label>Type of Property:</label>
                                         <select data-bind="options: $root.propertycategories ,optionsText: 'Name', optionsValue: 'Id', value:selectedPropertyCategory, optionsCaption:'Select Category'" class="form-control"></select>
                                     </div>
-                                    <div class="form-group">
-                                        <label>Emirates</label>
-                                        <select data-bind="options: $root.states ,optionsText: 'Name', optionsValue: 'Id', value:selectedState, optionsCaption:'Select State'" class="form-control"></select>
+                                    <div class=" form-group">
+                                        <label>Country</label>
+                                        <select class="form-control" data-bind="options:$root.Countries,optionsText:'Name',optionsValue:'Id',value:$parent.selectedCountry,optionsCaption:'Select Country'"></select>
                                     </div>
-                                    <div class="form-group">
-                                        <label>Location</label>
-                                        <select data-bind="options: $root.SelectedPotential().locations ,optionsText: 'Name', optionsValue: 'Id', value:selectedLocation, optionsCaption:'Select Location'" class="form-control"></select>
+                                    <div class=" form-group">
+                                        <label>State</label>
+                                        <select class="form-control" data-bind="options:$root.States,optionsText:'Name',optionsValue:'Id',value:$parent.selectedState,optionsCaption:'Select State'"></select>
+                                    </div>
+                                    <div class=" form-group">
+                                        <label>City</label>
+                                        <select class="form-control" data-bind="options:$root.Cities,optionsText:'Name',optionsValue:'Id',value:CityId,optionsCaption:'Select City'"></select>
                                     </div>
                                     <div class="form-group">
                                         <label>Floor</label>
@@ -252,6 +257,9 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <script src="~/Content/js/select2.min.js"></script>
     <script src="~/App/ViewModels/CRM/models.js"></script>
+    <script src="~/App/ViewModels/Amenity/AmenityModel.js"></script>
+<script src="~/App/ViewModels/Property/PropertyModel.js"></script>
+    <script src="~/App/ViewModels/Property/PropertyModel.js"></script>
     <script src="~/App/ViewModels/Potential/PotentialViewModel.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
