Removed select2.min.js from layout page.

--- a/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
+++ b/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
@@ -273,7 +273,7 @@
             @*@Scripts.Render("~/Content/Js/KnockoutJS")*@
            <script src="https://cdn.jsdelivr.net/knockout/3.3.0/knockout.js"></script>
             @Scripts.Render("~/Content/Js/CommonKnockoutJs")
-            <script src="~/Content/js/select2.min.js"></script>
+            @*<script src="~/Content/js/select2.min.js"></script>*@
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.0/js/bootstrap-datepicker.min.js"></script>
             @RenderSection("scripts", required: false)
 </body>
