Fixed some bugs.

--- a/Source/CRMLite.UI/Views/User/ChangePassword.cshtml
+++ b/Source/CRMLite.UI/Views/User/ChangePassword.cshtml
@@ -2,41 +2,46 @@
 @{
     ViewBag.Title = "ChangePassword";
 }
-<div class="">
-    <div class="row">
-        <div class="col-md-5">
-            <h2>Change Password</h2>
+<div class="login-form">
+    <div class="col-md-12">
+        <h3 class="login-form-header-title">Change Password</h3>
+    </div>
+    <div class="login-wrap">
+        <div class="col-md-12">
             <p>Please choose a strong password and don't reuse it for other accounts.Use atleast 6 characters. Don’t use a password from another site.</p>
-            @using(Html.BeginForm("ChangePassword","User",FormMethod.Post))
-            { 
-                <div>
-                    <div class="form-group">
-                        <label for="text" class="text-size">
-                            Old Password
-                        </label>
-                        @Html.PasswordFor(model => model.CurrentPassword, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model=>model.CurrentPassword)
-                    </div>
-                    <div class="form-group">
-                        <label for="text" class="text-size">
-                            New Password
-                        </label>
-                        @Html.PasswordFor(model => model.NewPassword, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.NewPassword)
-                    </div>
-                    <div class="form-group">
-                        <label for="text" class="text-size">
-                            Confirm Password
-                        </label>
-                        @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.ConfirmPassword)
-                    </div>
-                    <div class="form-group">                   
-                        <input type="reset" class="btn btn-default" value="Reset" />
-                        <input type="submit" class="btn btn-primary" value="Change Password" />
-                        <label class="text-success">@ViewBag.Message</label>
-                    </div>
-                </div>
+            
+            @using (Html.BeginForm("ChangePassword", "User", FormMethod.Post))
+            {
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="form-group">
+                            <label for="text" class="text-size">
+                                Old Password
+                            </label>
+                            @Html.PasswordFor(model => model.CurrentPassword, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.CurrentPassword)
+                        </div>
+                        <div class="form-group">
+                            <label for="text" class="text-size">
+                                New Password
+                            </label>
+                            @Html.PasswordFor(model => model.NewPassword, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.NewPassword)
+                        </div>
+                        <div class="form-group">
+                            <label for="text" class="text-size">
+                                Confirm Password
+                            </label>
+                            @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.ConfirmPassword)
+                        </div>
+                        <div class="form-group">
+                            <input type="reset" class="btn btn-default" value="Reset" />
+                            <input type="submit" class="btn btn-primary" value="Change Password"/>
+                            <label class="text-success">@ViewBag.ChangedMessage</label>
+                            <label class="text-danger">@ViewBag.Message</label>
+                        </div>
+                    </div>  </div>
             }
         </div>
     </div>
