--- a/Source/CRMLite.UI/Areas/CRM/Views/Agent/Details.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Agent/Details.cshtml
@@ -7,45 +7,45 @@
 </div>
 <input type="hidden" id="hdnAgentId" value="@ViewBag.AgentId" />
 <div>
-    <div>
+    <div data-bind="loading:$root.isBusy">
         <div class="col-lg-3" col-xs-12>
-            
-                <div class="form-group">
-                    <img data-bind="attr:{src:selectedAgent().image}" class="imgsize"/>
-                </div>
+
+            <div class="form-group">
+                <img data-bind="attr:{src:selectedAgent().image}" class="imgsize" />
             </div>
+        </div>
         <div class="col-lg-9">
-                <div class="form-group">
-                    <label class="lblwidth">First Name</label><span data-bind="text:selectedAgent().firstname"></span>
-                </div>
-                <div class="form-group">
-                    <label class="lblwidth">Last Name</label><span data-bind="text:selectedAgent().lastname"></span>
-                </div>
-                <div class="form-group">
-                    <label class="lblwidth">Phone</label><span data-bind="text:selectedAgent().phoneNumber"></span>
-                </div>
-                <div class="form-group">
-                    <label class="lblwidth">Email</label><span data-bind="text:selectedAgent().email"></span>
-                </div>
+            <div class="form-group">
+                <label class="lblwidth">First Name</label><span data-bind="text:selectedAgent().firstname"></span>
+            </div>
+            <div class="form-group">
+                <label class="lblwidth">Last Name</label><span data-bind="text:selectedAgent().lastname"></span>
+            </div>
+            <div class="form-group">
+                <label class="lblwidth">Phone</label><span data-bind="text:selectedAgent().phoneNumber"></span>
+            </div>
+            <div class="form-group">
+                <label class="lblwidth">Email</label><span data-bind="text:selectedAgent().email"></span>
+            </div>
 
-                <div class="form-group">
-                    <label class="lblwidth">Address</label><span data-bind="text:selectedAgent().address"></span>
-                </div>
-                <div class="form-group">
-                    <label class="lblwidth">DED License Number</label><span data-bind="text:selectedAgent().DEDlicenseNumber"></span>
-                </div>
-                <div class="form-group">
-                    <label class="lblwidth">RERA Registration Number</label><span data-bind="text:selectedAgent().RERAregistrationNumber"></span>
-                </div>
-                <div class="form-group m-l-md">
-                    <label class="checkbox-inline i-checks">
-                        <input type="checkbox" data-bind="checked:selectedAgent().islistingmember">
-                        <i></i>Listing Member
-                    </label>
+            <div class="form-group">
+                <label class="lblwidth">Address</label><span data-bind="text:selectedAgent().address"></span>
+            </div>
+            <div class="form-group">
+                <label class="lblwidth">DED License Number</label><span data-bind="text:selectedAgent().DEDlicenseNumber"></span>
+            </div>
+            <div class="form-group">
+                <label class="lblwidth">RERA Registration Number</label><span data-bind="text:selectedAgent().RERAregistrationNumber"></span>
+            </div>
+            <div class="form-group m-l-md">
+                <label class="checkbox-inline i-checks">
+                    <input type="checkbox" data-bind="checked:selectedAgent().islistingmember">
+                    <i></i>Listing Member
+                </label>
 
-                    @*<input type="checkbox" data-bind="checked:selectedAgent().islistingmember"/><label> Listing Member</label>*@
-                </div>
-            
+                @*<input type="checkbox" data-bind="checked:selectedAgent().islistingmember"/><label> Listing Member</label>*@
+            </div>
+
         </div>
     </div>
     <div class="clearfix"></div>
