--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Create.cshtml
@@ -2,9 +2,11 @@
     <h3 class="inline-b">Create Lead</h3>
 </div>
 <div>
-    <div id="CreateLead" tabindex="-1" aria-hidden="true" data-bind="with:selectedLead">
-        <div class="col-md-12">
-            <h4 class="text-primary">Lead Information</h4></div>
+    <div data-bind="loading:$root.isBusy">
+        <div id="CreateLead" tabindex="-1" aria-hidden="true" data-bind="with:selectedLead">
+            <div class="col-md-12">
+                <h4 class="text-primary">Lead Information</h4>
+            </div>
             <div class="col-lg-12 bdr">
                 <div class="row">
                     <div class="col-md-6">
@@ -43,29 +45,31 @@
                         </div>
                     </div>
                 </div>
-            </div><div class="col-md-12">
-                      <h4 class="text-primary">Contact Details</h4></div>
-    <div class="col-lg-12 bdr">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="form-group">
-                    <label>Email</label>
-                    <input type="text" data-bind="value:Email" class=" form-control" />
-                </div>
-                <div class="form-group">
-                    <label>Website</label>
-                    <input type="text" data-bind="value:Website" class=" form-control" />
+            </div>
+            <div class="col-md-12">
+                <h4 class="text-primary">Contact Details</h4>
+            </div>
+            <div class="col-lg-12 bdr">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            <label>Email</label>
+                            <input type="text" data-bind="value:Email" class=" form-control" />
+                        </div>
+                        <div class="form-group">
+                            <label>Website</label>
+                            <input type="text" data-bind="value:Website" class=" form-control" />
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            <label>Phone</label>
+                            <input type="text" data-bind="value:Phone,numericOnly:true" class=" form-control" />
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="col-lg-6">
-                <div class="form-group">
-                    <label>Phone</label>
-                    <input type="text" data-bind="value:Phone,numericOnly:true" class=" form-control" />
-                </div>
-            </div>
-        </div>
-    </div>
-       
+
             <div class="col-lg-6">
                 <div class="form-group">
                     <label>Comments</label>
@@ -74,10 +78,10 @@
                 </div>
             </div>
         </div>
-    <div class="col-md-12">
-        <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveLead"><span class=" ladda-label">Save</span></button>
+        <div class="col-md-12">
+            <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveLead"><span class=" ladda-label">Save</span></button>
+        </div>
     </div>
-
 </div>
 
 @section scripts{
