--- a/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
+++ b/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>CRM Lite</title>
     <!--css here-->
-        @Styles.Render("~/Content/BootstrapminCss")
+    @Styles.Render("~/Content/BootstrapminCss")
     @*<link href="//cdn.jsdelivr.net/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" />*@
     @Styles.Render("~/Content/BootstrapCommonCss")
     @Styles.Render("~/Content/FontAndIconCommonCss")
@@ -21,56 +21,12 @@
     @using CRMLite.UI.Helpers;
 @using Microsoft.AspNet.Identity
     <div id="preloader">
-        @*<div id="preloader_status">
-            <div class="spinner"></div>
-        </div>*@
     </div>
 <div class="vbox">
 <header class="bg-white header header-md navbar navbar-fixed-top-xs box-shadow">
     <div class="navbar-header aside-md dk"> <a class="btn btn-link visible-xs" data-toggle="class:nav-off-screen,open" data-target="#nav,html"> <i class="fa fa-bars"></i> </a> <a href="/Home/Index" class="navbar-brand"> <img src="~/Content/images/crm-lite-logo.png" class="m-r-sm" alt="scale"> <span class="hidden-nav-xs"></span> </a> <a href="#nav" id="btntoggle" data-toggle="class:nav-xs" class="btn btn-icon icon-muted btn-inactive m-l-xs m-r-xs"> <i class="fa fa-reorder text"></i> <i class="fa fa-arrow-left text-active"></i> </a> <a class="btn btn-link visible-xs" data-toggle="dropdown" data-target=".user"> <i class="fa fa-cog"></i> </a>
     </div>
-    <ul class="nav navbar-nav hidden-xs">
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <i class="fa fa-th"></i> </a>
-            <section class="dropdown-menu aside-lg bg-white on animated fadeInLeft">
-                <div class="row m-l-none m-r-none m-t m-b text-center">
-                    <div class="col-xs-4">
-                        <div class="vertical-v"> <a href="#"> <span class="m-b-xs block"> <i class="fa fa-envelope fa-2x text-primary-lt"></i> </span> <small class="text-muted">Mailbox</small> </a>
-                        </div>
-                    </div>
-                    <div class="col-xs-4">
-                        <div class="vertical-v"> <a href="#"> <span class="m-b-xs block"> <i class="fa fa-calendar fa-2x text-danger-lt"></i> </span> <small class="text-muted">Calendar</small> </a>
-                        </div>
-                    </div>
-                    <div class="col-xs-4">
-                        <div class="vertical-v"> <a href="#"> <span class="m-b-xs block"> <i class="fa fa-map-marker fa-2x text-success-lt"></i> </span> <small class="text-muted">Map</small> </a>
-                        </div>
-                    </div>
-                    <div class="col-xs-4">
-                        <div class="vertical-v"> <a href="#"> <span class="m-b-xs block"> <i class="fa fa-rocket fa-2x text-info-lt"></i> </span> <small class="text-muted">Trainning</small> </a>
-                        </div>
-                    </div>
-                    <div class="col-xs-4">
-                        <div class="vertical-v"> <a href="#"> <span class="m-b-xs block"> <i class="fa fa-picture-o fa-2x text-muted"></i> </span> <small class="text-muted">Photos</small> </a>
-                        </div>
-                    </div>
-                    <div class="col-xs-4">
-                        <div class="vertical-v"> <a href="#"> <span class="m-b-xs block"> <i class="fa fa-clock-o fa-2x text-warning-lter"></i> </span> <small class="text-muted">Timeline</small> </a>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </li>
-    </ul>
-    <!-- <form class="navbar-form navbar-left input-s-lg m-t m-l-n-xs hidden-xs" role="search">
-        <div class="form-group">
-            <div class="input-group"> <span class="input-group-btn">
-                          <button type="submit" class="btn btn-sm bg-white b-white btn-icon"><i class="fa fa-search"></i></button>
-                          </span>
-                <input type="text" class="form-control input-sm no-border" placeholder="Search apps, projects...">
-            </div>
-        </div>
-    </form>-->
+
     <div class="form-divider">
         <form id="searchForm">
             <fieldset>
@@ -82,37 +38,13 @@
         </form>
     </div>
     <ul class="nav navbar-nav navbar-right m-n hidden-xs nav-user user">
-        <li class="hidden-xs">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <i class="fa fa-align-left"></i> <span class="badge badge-sm up bg-danger count">2</span> </a>
-            <section class="dropdown-menu aside-xl animated flipInY">
-                <section class="panel bg-white">
-                    <div class="panel-heading b-light bg-light"> <strong>You have <span class="count">2</span> notifications</strong>
-                    </div>
-                    <div class="list-group list-group-alt">
-                        <a href="#" class="media list-group-item">
-                            <span class="pull-left thumb-sm"> <img src="~/Content/images/logo.png" alt="..." class="img-circle"> </span> <span class="media-body block m-b-none">
-                                                Loren ipsum dollor<br>
-                                                <small class="text-muted">10 minutes ago</small>
-                                            </span>
-                        </a> <a href="#" class="media list-group-item">
-                            <span class="media-body block m-b-none">
-                                                Loren ipsum dollor<br>
-                                                <small class="text-muted">1 hour ago</small>
-                                            </span>
-                        </a>
-                    </div>
-                    <div class="panel-footer text-sm"> <a href="#" class="pull-right"><i class="fa fa-cog"></i></a> <a href="#notes" data-toggle="class:show animated fadeInRight">See all the notifications</a>
-                    </div>
-                </section>
-            </section>
-        </li>
+ 
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <span class="thumb-sm avatar pull-left"> <img src="~/Content/images/logo.png" alt="..."> </span>Hello  @User.Identity.GetUserName() <b class="caret"></b> </a>
             <ul class="dropdown-menu animated fadeInRight">
                 <li> <span class="arrow top"></span> <a href="@Url.Action("Index", "Settings", new {area = "CRM"})">Settings</a> </li>
                 <li> <a href="@Url.Action("UpdateProfile", "User", new {area = ""})">Profile</a> </li>
-                @*<li> <a href="#"> <span class="badge bg-danger pull-right">3</span> Notifications </a> </li>*@
-                @*<li> <a href="#">Help</a> </li>*@
+                <li> <a href="@Url.Action("ChangePassword", "User", new {area = ""})">Change Password</a> </li>
                 <li class="divider"></li>
                 <li> <a href="@Url.Action("SignOut", "User", new {area = ""})">Logout</a> </li>
             </ul>
