--- a/Source/CRMLite.UI/Areas/CRM/Views/Agent/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Agent/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿    <div class="col-md-12 m-top20">
             <h4 class="inline-b">Create Agent</h4>
     </div>
-    <div id="CreateAgent" tabindex="-1" aria-hidden="true" data-bind="with:selectedAgent,loading:$root.isbusy">
+    <div id="CreateAgent" tabindex="-1" aria-hidden="true" data-bind="with:selectedAgent">
     <div class="col-lg-12 pad0 padB0">
         <div class="row">
             <div class="col-md-6">
@@ -61,11 +61,12 @@
         </div>
     </div>
 </div>
-                    <div class="col-md-12">
-                        
-                        <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveAgent"><span class=" ladda-label">Save</span></button>
-                        
-                    </div>
+<div class="col-md-12">
+
+    <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveAgent"><span class=" ladda-label">Save</span></button>
+
+</div>
+
 
 @section scripts{
     <script src="~/App/ViewModels/CRM/models.js"></script>
