--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/ConvertLead.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/ConvertLead.cshtml
@@ -5,108 +5,120 @@
         </div>
     </div>
     <div class="clearfix"></div>
-    <input type="hidden" id="hdnLeadId" value="@ViewBag.LeadId" />
+    <input type="hidden" id="hdnLeadId" value="@ViewBag.LeadId"/>
+    <div data-bind="loading:$root.isBusy()">
+        <div data-bind="template:{name:'convert-Lead-template',data:selectedConvertLead}">
+        </div>
+        <div class="col-lg-12">
+            <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.convertingLead"><span class=" ladda-label">Convert</span></button>
 
-    <div data-bind="with:selectedConvertLead">
-        <div class="bdr padTB-sm">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label>Account Name</label>
-                    <input type="text" class="form-control" data-bind="value:AccountName" />
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label>Assign To</label>
-                    <select data-bind="options: $root.Assignto ,optionsText: 'Name',optionsValue: 'Id', value:SelectedAssignedTo" class="form-control"></select>
-                </div>
-            </div>
-            <div class="col-md-12">
-                <div class="form-group m-l-md">
-
-                    <label class="checkbox-inline i-checks">
-                        <input type="checkbox" data-bind="checked:isChecked">
-                        <i></i> Do not create a new potential upon conversion
-                    </label>
-
-                    @*<input type="checkbox" data-bind="checked:isChecked" /><span>
-                        Do not create a new potential upon conversion
-                    </span>*@
-                </div>
+        </div>
+    </div>
+</div>
+<script id="convert-Lead-template" type="text/html">
+    <div class="bdr padTB-sm">
+        <div class="col-md-6">
+            <div class="form-group">
+                <label>Account Name</label>
+                <input type="text" class="form-control" data-bind="value:AccountName" />
             </div>
         </div>
-        <div data-bind="visible:isCheckedBox">
-            <div class="bdr padTB-sm marT-lg">
-                <div class="col-md-12">
-                    <h4 class="text-primary">Potential Information</h4>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label>Potential Name</label><input type="text" class="form-control" data-bind="value:PotentialName" />
-                    </div>
-                    <div class="form-group">
-                        <label>Potential Amount</label><input type="text" class="form-control" data-bind="value:PotentialAmount,numericOnly:true" />
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label>Expected Closing Date</label>
-                        <div id="datetimepicker1" class="input-append date">
-                            <input data-format="dd/MM/yyyy" type="text" class="form-control"  id="datePickerPoint"></input>
-                            <span class="add-on">
-                                <i class="fa fa-calendar" data-time-icon="icon-time"></i>
-                            </span>
-                        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                <label>Assign To</label>
+                <select data-bind="options: $root.Assignto ,optionsText: 'Name',optionsValue: 'Id', value:SelectedAssignedTo" class="form-control"></select>
+            </div>
+        </div>
+        <div class="col-md-12">
+            <div class="form-group m-l-md">
 
-                        @*<div id="datetimepicker1" class="input-append date">
+                <label class="checkbox-inline i-checks">
+                    <input type="checkbox" data-bind="checked:isChecked">
+                    <i></i> Do not create a new potential upon conversion
+                </label>
+
+                @*<input type="checkbox" data-bind="checked:isChecked" /><span>
+                        Do not create a new potential upon conversion
+                    </span>*@
+            </div>
+        </div>
+    </div>
+    <div data-bind="visible:isCheckedBox">
+        <div class="bdr padTB-sm marT-lg">
+            <div class="col-md-12">
+                <h4 class="text-primary">Potential Information</h4>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label>Potential Name</label><input type="text" class="form-control" data-bind="value:PotentialName" />
+                </div>
+                <div class="form-group">
+                    <label>Potential Amount</label><input type="text" class="form-control" data-bind="value:PotentialAmount,numericOnly:true" />
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label>Expected Closing Date</label>
+                    @*<div id="datetimepicker1" class="input-append date">
                             <input data-format="dd/MM/yyyy" type="text" class="form-control" id="datePickerPoint" />
                             <span class="add-on">
                                 <i class="fa fa-calendar" data-time-icon="icon-time"></i>
                             </span>
                         </div>*@
-
-                        @*<input type="text" placeholder="Click here to Add Date" id="" class="form-control datePtoP">*@
-                        @*<input type="text" id="ExpectedDate" class="form-control" data-bind="datepicker:ExpectedDate,value:ExpectedDate" />*@
+                    <div id="datetimepicker3" class="input-append date">
+                        <input data-format="dd/MM/yyyy" type="text" class="form-control" id="datePickerPoint" />
+                        <span class="add-on">
+                            <i class="fa fa-calendar" data-time-icon="icon-time"></i>
+                        </span>
                     </div>
-                    <div class="form-group">
-                        <label>Sales Stage</label>
-                        <select data-bind="options: $root.salesStage ,optionsText: 'Name',optionsValue: 'Id', value:SelectedSalesStage" class="form-control"></select>
 
-                    </div>
+                    @*<input type="text" placeholder="Click here to Add Date" id="" class="form-control datePtoP">*@
+                    @*<input type="text" id="ExpectedDate" class="form-control" data-bind="datepicker:ExpectedDate,value:ExpectedDate" />*@
+                </div>
+                <div class="form-group">
+                    <label>Sales Stage</label>
+                    <select data-bind="options: $root.salesStage ,optionsText: 'Name',optionsValue: 'Id', value:SelectedSalesStage" class="form-control"></select>
+
                 </div>
             </div>
         </div>
-        <div class="bdr padTB-sm marT-lg">
-            <div class="col-md-12">
-                <h4 class="text-primary">Contact Information</h4>
+    </div>
+    <div class="bdr padTB-sm marT-lg">
+        <div class="col-md-12">
+            <h4 class="text-primary">Contact Information</h4>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                <label>First Name</label><input type="text" class="form-control" data-bind="value:FirstName" />
             </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label>First Name</label><input type="text" class="form-control" data-bind="value:FirstName" />
-                </div>
-                <div class="form-group">
-                    <label>Last Name</label><input type="text" class="form-control" data-bind="value:LastName" />
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label>Email</label>
-                    <input type="text" class="form-control" data-bind="value:Email" />
-                </div>
-                <div class="form-group">
-                    <label>Phone</label>
-                    <input type="text" class="form-control" data-bind="value:Phone" />
-                </div>
+            <div class="form-group">
+                <label>Last Name</label><input type="text" class="form-control" data-bind="value:LastName" />
             </div>
         </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                <label>Email</label>
+                <input type="text" class="form-control" data-bind="value:Email" />
+            </div>
+            <div class="form-group">
+                <label>Phone</label>
+                <input type="text" class="form-control" data-bind="value:Phone" />
+            </div>
+        </div>
+    </div>
+</script>
 
+
+<div class="form-group">
+    <label>Contract End Date</label>
+    <div id="datetimepicker2" class="input-append date">
+        <input data-format="dd/MM/yyyy" type="text" class="form-control" id="ContractEndDatetxt"></input>
+        <span class="add-on">
+            <i class="fa fa-calendar" data-time-icon="icon-time"></i>
+        </span>
     </div>
-    <div class="col-lg-12">
-        <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.convertingLead"><span class=" ladda-label">Convert</span></button>
-           
-    </div>
+
 </div>
-
 @section scripts{
     <script src="~/Content/js/emailinjector.js"></script>
     <script src="~/App/ViewModels/CRM/models.js"></script>
@@ -120,12 +132,26 @@
             vm.convertSelectedLead();
         });
     </script>
+
+    @*<script type="text/javascript">
+        $(document).ready(function () {
+            $('#datetimepicker3').datetimepicker();
+        })
+        //$(function () {
+        //    $('#datetimepicker3').datetimepicker({
+
+        //    });
+        //});
+    </script>*@
 <script type="text/javascript">
     $(function () {
-        $('#datetimepicker1').datetimepicker({
+        $('#datetimepicker2').datetimepicker({
 
         });
     });
 </script>
+
+
+
 <script src="~/Content/js/script-ladda.js"></script>
 }
