--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Create.cshtml
@@ -4,9 +4,10 @@
 }
 <div class="col-md-12">
     <h3 class="inline-b">
-       Create
+        Create
     </h3>
-    </div>
+</div>
+<div data-bind="loading:$root.isBusy()">
     <div id="potentialDiv" data-bind="with:SelectedPotential">
         <div class="col-md-12">
             <h4 class="text-primary">Potential Information</h4>
@@ -65,7 +66,7 @@
                             </div>
                         </div>
                     </div>
-            </div>
+                </div>
                 <div class="clearfix"></div>
             </div>
         </div>
@@ -75,15 +76,15 @@
             <h4 class="text-primary">Descriptions </h4>
             <div class="panel-body">
                 <div class="row">
-                
-                        <label>Comments</label>
-                        <textarea class="form-control" data-bind="value:Comments"></textarea>
-                   
-             </div>
+
+                    <label>Comments</label>
+                    <textarea class="form-control" data-bind="value:Comments"></textarea>
+
+                </div>
             </div>
         </div>
     </div>
-
+</div>
     <div>
         <div class="col-md-12">
             <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.savePotential"><span class=" ladda-label">Save</span></button>
