--- a/Source/CRMLite.UI/Areas/CRM/Views/Contact/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Contact/Edit.cshtml
@@ -91,6 +91,10 @@
                                 <label>City</label>
                                 <input type="text" data-bind="value:City" class="form-control" />
                             </div>
+                            <div class=" form-group">
+                                <label>Region</label>
+                                <input type="text" data-bind="value:Region" class="form-control" />
+                            </div>
                             <div class="clearfix"></div>
 
                         </div>
@@ -98,12 +102,11 @@
                     </div>
                 </div>
                 <div class="col-md-12 row">
-                    <h4 class="text-primary">Other</h4>
                 </div>
                 <div class="bdr">
 
                     <div class="form-group">
-                        <label>Comments</label>
+                        <label>Description</label>
                         <textarea data-bind="value:Comments" class=" form-control" rows="6"></textarea>
                     </div>
 
