--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Details.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Details.cshtml
@@ -13,7 +13,7 @@
 
                     <i class="fa fa-envelope"></i> &nbsp;<span id="mailus"></span>
                     <i class="fa fa-filter"></i>
-                    <a href="#" data-bind="click:$root.convertLead" data-toggle="modal" data-target="#ConvertLead">
+                    <a href="#" data-bind="click:$root.convert" data-toggle="modal" data-target="#ConvertLead">
                         Convert To Potential
                     </a>
                     <i class="fa fa-calendar"></i>
@@ -77,7 +77,7 @@
             <div class="clearfix">
                 <div class="col-lg-6">
                     <div class="row">
-                        <label class="lblwidth"><b>Description </b></label><span data-bind="text:Description"></span>
+                        <label class="lblwidth"><b>Description </b></label><span data-bind="text:Comments"></span>
                     </div>
                 </div>
             </div>
