--- a/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
+++ b/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
     </div>
 <div class="vbox">
 <header class="bg-white header header-md navbar navbar-fixed-top-xs box-shadow">
-    <div class="navbar-header aside-md dk"> <a class="btn btn-link visible-xs" data-toggle="class:nav-off-screen,open" data-target="#nav,html"> <i class="fa fa-bars"></i> </a> <a href="/Home/Index" class="navbar-brand"> <img src="~/Content/images/crm-lite-logo.png" class="m-r-sm" alt="scale"> <span class="hidden-nav-xs"></span> </a> <a href="#nav" id="btntoggle" data-toggle="class:nav-xs" class="btn btn-icon icon-muted btn-inactive m-l-xs m-r-xs"> <i class="fa fa-reorder text"></i> <i class="fa fa-arrow-left text-active"></i> </a> <a class="btn btn-link visible-xs" data-toggle="dropdown" data-target=".user"> <i class="fa fa-cog"></i> </a>
+    <div class="navbar-header aside-md dk"> <a class="btn btn-link visible-xs" data-toggle="class:nav-off-screen,open" data-target="#nav,html"> <i class="fa fa-bars"></i> </a> <a href="/CRM/Home" class="navbar-brand"> <img src="~/Content/images/crm-lite-logo.png" class="m-r-sm" alt="scale"> <span class="hidden-nav-xs"></span> </a> <a href="#nav" id="btntoggle" data-toggle="class:nav-xs" class="btn btn-icon icon-muted btn-inactive m-l-xs m-r-xs"> <i class="fa fa-reorder text"></i> <i class="fa fa-arrow-left text-active"></i> </a> <a class="btn btn-link visible-xs" data-toggle="dropdown" data-target=".user"> <i class="fa fa-cog"></i> </a>
     </div>
 
     <div class="form-divider">
@@ -192,7 +192,8 @@
     </section>
 </section>
 </div>
-           <script src="//cdn.jsdelivr.net/jquery/2.1.1/jquery.min.js"></script>
+    <script src="~/Content/js/jquery-2.1.1.min.js"></script>
+           @*<script src="//cdn.jsdelivr.net/jquery/2.1.1/jquery.min.js"></script>*@
            @Scripts.Render("~/Content/Js/BootstrapminJs")
             @Scripts.Render("~/Content/Js/JqueryScripts")
             @Scripts.Render("~/Content/Js/BlueimpfileuploadJs")
