--- a/Source/CRMLite.UI/Areas/CRM/Views/Account/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Account/Create.cshtml
@@ -54,15 +54,14 @@
             </div>
         </div>
         <div class="col-md-12">
-            <h4 class="text-primary">Other</h4>
         </div>
         <div class="bdr col-md-12">
 
             <div class="form-group">
-                <label>Comments</label>
+                <label>Description</label>
                 <textarea data-bind="value:Comment" class=" form-control" rows="4"></textarea>
             </div>
-
+            
         </div>
     </div>
     <div>
