--- a/Source/CRMLite.UI/Areas/CRM/Views/Contact/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Contact/Create.cshtml
@@ -89,6 +89,10 @@
                                 <label>City</label>
                                 <input type="text" data-bind="value:City" class="form-control" />                               
                             </div>
+                            <div class=" form-group">
+                                <label>Region</label>
+                                <input type="text" data-bind="value:Region" class="form-control" />
+                            </div>
                             <div class="clearfix"></div>
 
                         </div>
@@ -101,7 +105,7 @@
                 <div class="bdr">
 
                     <div class="form-group">
-                        <label>Comments</label>
+                        <label>Description</label>
                         <textarea data-bind="value:Comments" class=" form-control" rows="6"></textarea>
                     </div>
 
