--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Create.cshtml
@@ -73,7 +73,7 @@
             <div class="col-lg-6">
                 <div class="form-group">
                     <label>Description</label>
-                    <textarea data-bind="value:Description" class=" form-control"
+                    <textarea data-bind="value:Comments" class=" form-control"
                               rows="2"></textarea>
                 </div>
             </div>
