--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Edit.cshtml
@@ -75,7 +75,7 @@
                 <div class="col-lg-12 bdr">
                     <div class="form-group">
                         <label>Description</label>
-                        <textarea data-bind="value:Description" class=" form-control"
+                        <textarea data-bind="value:Comments" class=" form-control"
                                   rows="2"></textarea>
                     </div>
                 </div>
