--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Index.cshtml
@@ -48,8 +48,7 @@
             <thead class="bg-grey">
                 <tr>
                     <th class="text-center">User Id </th>
-                    <th class="text-center">First Name </th>
-                    <th class="text-center">Last Name </th>
+                    <th class="text-center">Name </th>
                     <th class="text-center">Company</th>
                     <th class="text-center">Phone</th>
                     <th class="text-center">Website</th>
@@ -63,8 +62,7 @@
             <tbody data-bind='foreach:$root.LeadLists'>
                 <tr>
                     <td><span data-bind="text: RefId"> </span></td>
-                    <td><span data-bind="text: FirstName"> </span></td>
-                    <td><span data-bind="text: LastName"> </span></td>
+                    <td><span data-bind="text: Name"> </span></td>
                     <td><span data-bind="text: Company"> </span></td>
                     <td><span data-bind="text: Phone"> </span></td>
                     <td><span data-bind="text: Website"> </span></td>
@@ -75,19 +73,19 @@
                     <td>
                         @*<a href="#">Todo</a>*@<a href="#" data-bind="click:$root.gotoLeaddetails" data-toggle="modal" data-target="#Details">
                         <i class="fa fa-lg fa-info-circle " data-toggle="tooltip" data-placement="top" title="Details" data-original-title="Details"></i>
-                        </a>&nbsp;
+                        </a>
                         @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageLead))
                         {
                             <a href="#" data-bind="click:$root.update">
                                 <i class="fa fa-lg fa-pencil-square-o " data-toggle="tooltip" data-placement="top" title="Edit" data-original-title="Edit"></i>
-                            </a>@:&nbsp;
+                            </a>
                 }
                         @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ConvertLead))
                         {
                             <a href="#" data-bind="click:$root.convert">
                                 <i class="fa fa-lg fa-filter" data-toggle="tooltip" data-placement="top"
                                    title="Convert Potential" data-original-title="Convert Potential"></i>
-                            </a>@:&nbsp;
+                            </a>
                 }
                         @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageLead))
                     {
