--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Create.cshtml
@@ -73,11 +73,10 @@
 
         <div class="col-md-12">
 
-            <h4 class="text-primary">Descriptions </h4>
             <div class="panel-body">
-                <div class="row">
+                <div class="row form-group">
 
-                    <label>Comments</label>
+                    <label>Descriptions</label>
                     <textarea class="form-control" data-bind="value:Comments"></textarea>
 
                 </div>
@@ -151,7 +150,7 @@
                 </div>
                 <div class="modal-footer">
 
-                    <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.savePotential"><span class=" ladda-label">Save</span></button>
+                    <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.CreateAccount"><span class=" ladda-label">Save</span></button>
                 </div>
                 
             </div>
