--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Details.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Details.cshtml
@@ -19,7 +19,7 @@
                 <div class="col-lg-12">
                     <div class="form-group">
                         <label class="lblwidth"><b>Potential Name</b>&nbsp;</label>
-                        <label class="lblwidth" data-bind="text:PotentialName"></label>
+                        <label  data-bind="text:PotentialName"></label>
                     </div>
                     <div class="form-group">
                         <label class="lblwidth"><b>Potential Amount</b>&nbsp;</label>
@@ -111,41 +111,7 @@
                             </div>
                         </div>
                         
-                    <div class="panel panel-default m-t-lg">
-                      
-                            <div class="panel-heading new-panel-head">
-                                <h4 class="panel-title">
-                                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordionAccount" href="#collapseProperty">
-                                        Property
-                                        <i class="fa fa-angle-down pull-right"></i>
-                                    </a>
-                                </h4>
-                            </div>
-                            <div id="collapseProperty" class="panel-collapse collapse">
-                                <div class="panel-body">
-                                    <table class="table table-responsive table-striped">
-                                        <thead>
-                                            <tr>
-                                                <th class="text-center">Type</th>
-                                                <th class="text-center">Category</th>
-                                                <th class="text-center">Area</th>
-                                                <th class="text-center">Floor</th>
-                                                <th class="text-center">Budget From</th>
-                                                <th class="text-center">Budget To</th>
-                                            </tr>
-                                            <tr>
-                                                <td class="text-center" data-bind="text:PropertyType"></td>
-                                                <td class="text-center" data-bind="text:PropertyCategory"></td>
-                                                <td class="text-center" data-bind="text:PropertyArea"></td>
-                                                <td class="text-center" data-bind="text:PropertyFloor"></td>
-                                                <td class="text-center" data-bind="text:PropertyBudgetFrom"></td>
-                                                <td class="text-center" data-bind="text:PropertyBudgetTo"></td>
-                                            </tr>
-                                        </thead>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
+                    
                     </div>
                 </div>
                 </div>
