--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Edit.cshtml
@@ -78,13 +78,12 @@
                     </div>
                     
                     <div>
-                            <h4 class="text-primary">Descriptions </h4>
                            
-                                <div class="padTB-sm">
-                                   
-                                    <label>Comments</label>
-                                    <textarea class="form-control" data-bind="value:Comments"></textarea>
-                                </div>
+                        <div class="form-group padTB-sm">
+
+                            <label>Descriptions</label>
+                            <textarea class="form-control" data-bind="value:Comments"></textarea>
+                        </div>
                               
                            
                     </div>
@@ -103,16 +102,7 @@
     </div>
 </div>
 </div>
-<div class="col-lg-12 m-t-sm">
-    
-        <div @*data-bind="loading:$root.isBusy"*@>
-            <button class="btn btn-dark m-l-sm ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:saveMorePotential" data-dismiss="modal" aria-hidden="true"><span class=" ladda-label">Save</span></button>
-            @*<button type="button" class="btn btn-primary" data-bind="click:saveMoreProperty" data-dismiss="modal" aria-hidden="true">
-                    Save Changes
-                </button>*@
-      
-    </div>
-</div>
+
 <div class="modal fade" id="createAccount" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
 
