--- a/Source/CRMLite.UI/Areas/CRM/Views/User/Update.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/Update.cshtml
@@ -8,7 +8,7 @@
         </div>
         </div>
     <div class="clearfix"></div>
-    <div data-bind="arcLoader:$root.isBusy()">
+    <div data-bind="loading:$root.isBusy()">
         <div>
             <input type="hidden" id="hdnAgnetId" value="@ViewBag.UserId" />
             <div class="pad0 padB0" data-bind="with:selectedUser">
@@ -47,16 +47,6 @@
                         </label>
 
 
-                    </div>
-
-                    <div class="form-group ">
-                        <label>DED License No</label>
-                        <input type="text" data-bind="value:DEDlicenseNumber" class=" form-control" />
-                    </div>
-
-                    <div class="form-group">
-                        <label>RERA Registration No</label>
-                        <input type="text" data-bind="value:RERAregistrationNumber" class=" form-control" />
                     </div>
                     <div class="form-group">
                         <div class="btn-group">
